   - Windows:
     * Conntrack IPv6 fragment support.
   - DPDK:
     * Add support for DPDK 22.11.1.
   - For the QoS max-rate and STP/RSTP path-cost configuration OVS now assumes
     10 Gbps link speed by default in case the actual link speed cannot be
     determined.  Previously it was 10 Mbps.  Values can still be overridden
     by specifying 'max-rate' or '[r]stp-path-cost' accordingly.


v3.0.0 - 15 Aug 2022
--------------------
   - libopenvswitch API change:
     * To fix the Undefined Behavior issue causing the compiler to incorrectly
       optimize important parts of code, container iteration macros (e.g.,
       LIST_FOR_EACH) have been re-implemented in a UB-safe way.
     * Backwards compatibility has mostly been preserved, however the
       user-provided pointer is now set to NULL after the loop (unless it
       exited via "break;")
     * Users of libopenvswitch will need to double-check the use of such loop
       macros before compiling with a new version.
     * Since the change is limited to the definitions within the headers, the
       ABI is not affected.
   - OVSDB:
     * 'relay' service model now supports transaction history, i.e. honors the
       'last-txn-id' field in 'monitor_cond_since' requests from clients.
     * New unixctl command 'ovsdb-server/tlog-set DB:TABLE on|off".
       If turned on, ovsdb-server will log (at level INFO and rate limited)
       all operations that are committed to table TABLE in the DB database.
     * New Local_Config schema added to support Connections (--remote)
       configuration in a clustered databse independently for each server.
       E.g. for listening on unique addresses.  See the ovsdb.local-config.5
       manpage for schema details.
     * Returning unused memory to the OS after the database compaction is now
       enabled by default.  Use 'ovsdb-server/memory-trim-on-compaction off'
       unixctl command to disable.